--- a/contact.html
+++ b/contact.html
@@ -1,42 +1,15 @@
 ---
 layout: page
-title: Brampton Vaughan Website Design, Search Engine Optimization and Digital Marketing
+title: Toronto Web Design Development SEO PPC Contact - Fivestar Media
 lang: en
 ref: contact
 permalink: /contact/
 ---
 <body>
 	{% include menu.html %}
-	<div class="jumbotron website-design-background"></div>
+	<div class="jumbotron bg contact-us"></div>
 	<div class="banner">
-		<!-- <h2>Thank you for your interest in Fivestar Media. You may call us at (416) 464-6573, send us an email at <a href="mailto:ravifs@gmail.com">ravifs@gmail.com</a> or use the contact form below.</h2> -->
-		<script type="text/javascript">
-			//<![CDATA[
-			<!--
-			var x = "function f(x){var i,o=\"\",l=x.length;for(i=l-1;i>=0;i--) {try{o+=x.c" +
-				"harAt(i);}catch(e){}}return o;}f(\")\\\"function f(x,y){var i,o=\\\"\\\\\\\"" +
-				"\\\\,l=x.length;for(i=0;i<l;i++){if(i==32)y+=i;y%=127;o+=String.fromCharCod" +
-				"e(x.charCodeAt(i)^(y++));}return o;}f(\\\"\\\\DNAVI@HS\\\\\\\\006^XBXHBA\\\\" +
-				"\\\\030\\\\\\\\023\\\\\\\\016[\\\\\\\\006\\\\\\\\013b_YWQ\\\\\\\\033ERK\\\\" +
-				"\\\\037\\\\\\\\006\\\\\\\\016\\\\\\\\020C\\\\\\\\035\\\\\\\\n\\\\\\\\023\\\\" +
-				"\\\\025H\\\\\\\\000\\\\\\\\004\\\\\\\\037\\\\\\\\t\\\\\\\\037\\\\\\\\013\\\\" +
-				"\\\\034\\\\\\\\004Q\\\\\\\\033\\\\\\\\035T3\\\\\\\\037\\\\\\\\001\\\\\\\\03" +
-				"5\\\\\\\\n\\\\\\\\016\\\\\\\\032\\\\\\\\016]3eekb*%_h})gju-mn|}2fg5wc81.**4" +
-				">+\\\\\\\\026\\\\\\\\025\\\\\\\\017\\\\\\\\025\\\\\\\\021\\\\\\\\022\\\\\\\\" +
-				"025\\\\\\\\013\\\\\\\\010ZOEH\\\\\\\\r[\\\\\\\\\\\\\\\\\\\\\\\\020P\\\\\\\\" +
-				"\\\\\\\\\\\\\\\\023QXW^T\\\\\\\\031[O\\\\\\\\034\\\\\\\\001_\\\\\\\\037(3'%" +
-				"y\\\\\\\\031d*) &?#w<.&84 \\\\\\\\0242;615t830\\\\\\\\002}^\\\\\\\\023\\\\\\" +
-				"\\003\\\\\\\\025\\\\\\\\r\\\\\\\\003\\\\\\\\025'\\\\\\\\017\\\\\\\\004\\\\\\" +
-				"\\013\\\\\\\\002\\\\\\\\000C\\\\\\\\r\\\\\\\\000\\\\\\\\035M]\\\\\\\\022JU\\" +
-				"\\\\\\031\\\\\\\\005X\\\\\\\\014\\\\\\\\t\\\\\\\\036\\\\\\\\\\\\\\\\\\\\\\\\" +
-				"t\\\\\\\\026e!aljqgd|)ld~`.mu}}d:)9\\\\\\\\177*'82'-%\\\"\\\\,32)\\\"(f};)l" +
-				"o,0(rtsbus.o nruter};)i(tArahc.x=+o{)--i;0=>i;1-l=i(rof}}{)e(hctac};l=+l;x=" +
-				"+x{yrt{)611=!)31/l(tAedoCrahc.x(elihw;lo=l,htgnel.x=lo,\\\"\\\"=o,i rav{)x(" +
-				"f noitcnuf\")";
-			while (x = eval(x));
-			//-->
-			//]]>
-		</script>
+		<h2>Thank you for your interest in Fivestar Media. You may use the Contact Form below, call us at {% include telnumberlink.html %} or send us an email at {% include emaillink.html %} at your convenience.</h2>
 	</div>
 	<div class="body-container">
 		<div class="row eqHeight">
@@ -52,10 +25,7 @@ permalink: /contact/
 					<input type="text" name="_gotcha" style="display:none" />
 					<input type="submit" value="Send">
 				</form>
-				<script>
-					var contactform = document.getElementById('contactform');
-					contactform.setAttribute('action', '//formspree.io/' + 'fivestarmediahq' + '@' + 'gmail' + '.' + 'com');
-				</script>
+				{% include contactsend.html %}
 			</div>
 			<div class="col-xs-12 col-md-6 featuresPadding">
 				<div class="serviceDetail">
