--- a/thank-you.html
+++ b/thank-you.html
@@ -7,7 +7,7 @@ permalink: /thank-you/
 ---
 <body>
 	{% include menu.html %}
-	<div class="jumbotron website-design-background"></div>
+	<div class="jumbotron bg thank-you"></div>
 	<div class="banner contact">
 		<h2>Thank you! Your message has been received. We will be in touch with you shortly.</h2>
 	</div>
