--- a/website-design.html
+++ b/website-design.html
@@ -23,48 +23,48 @@ permalink: /website-design/
 				<!-- <h3>At Fivestar Media, we know the best websites should engage the user with compelling content balanced with eye-catching visuals. The website should be optimized to rank well with search engines, work seamlessly across all devices and be easy to use with a fast load time.</h3> -->
 			</div>
 		</div>
-		<div class="row eqHeight icons greybg">
+		<div class="row eqHeight icons Why">
 			<div class="col-xs-12 col-md-3">
 				<img src="{{ site.baseurl }}/images/responsive.png">
 				<h3>Responsive Design</h3>
-				<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
+				<p class="serviceTextBox">More than 65%+ traffic is mobile traffic. Our websites are designed to be mobile, tablet and computer friendly.</p>
 			</div>
 			<div class="col-xs-12 col-md-3">
 					<img src="{{ site.baseurl }}/images/analytics.png">
 					<h3>Google Analytics</h3>
-					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
+					<p class="serviceTextBox">Analyze data of your webite visitors to learn more about your customers and make better business decisions.</p>
 			</div>
 			<div class="col-xs-12 col-md-3">
 					<img src="{{ site.baseurl }}/images/content.png">
 					<h3>Content Management</h3>
-					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
+					<p class="serviceTextBox">Easily manage your blog posts to keep your company current and increase visibility in search engines.</p>
 			</div>
 			<div class="col-xs-12 col-md-3">
 					<img src="{{ site.baseurl }}/images/copyrighting.png">
 					<h3>Copyrighting</h3>
-					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
+					<p class="serviceTextBox">Let us help you with presenting your products and services with engaging content to take action on your website.</p>
 			</div>
 		</div>
-		<div class="row eqHeight icons greybg secondRow">
+		<div class="row eqHeight icons Why secondRow">
 				<div class="col-xs-12 col-md-3">
-					<img src="{{ site.baseurl }}/images/secure.png">
-					<h3>Secure</h3>
-					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
+					<img src="{{ site.baseurl }}/images/sm.png">
+					<h3>Social Media Integration</h3>
+					<p class="serviceTextBox">We leverage the power of social media on your website to help market your products and services.</p>
 			</div>
 			<div class="col-xs-12 col-md-3">
-					<img src="{{ site.baseurl }}/images/cloud.png">
-					<h3>Cloud Hosted</h3>
-					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
+					<img src="{{ site.baseurl }}/images/contact-form.png">
+					<h3>Contact Form</h3>
+					<p class="serviceTextBox">An effective and secure way to let your customers get in touch with you without exposing your email to spambots.</p>
 			</div>
 			<div class="col-xs-12 col-md-3">
-					<img src="{{ site.baseurl }}/images/seo.png">
-					<h3>SEO Friendly</h3>
-					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
+					<img src="{{ site.baseurl }}/images/gm.png">
+					<h3>Google Maps</h3>
+					<p class="serviceTextBox">Google Maps integrated into your website to make it easier for your clients to find your office location.</p>
 			</div>
 			<div class="col-xs-12 col-md-3">
 					<img src="{{ site.baseurl }}/images/xml.png">
 					<h3>XML Sitemap</h3>
-					<p class="serviceTextBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. sit amet consectetur elit.</p>
+					<p class="serviceTextBox">Helps get your website indexed by search engines more quickly by providing key details of all website files.</p>
 			</div>
 		</div>
 		<div class="row">
@@ -83,124 +83,138 @@ permalink: /website-design/
 			<div class="col-xs-12 col-md-5 featuresPadding">
 				<div class="serviceDetail">
 					<h2>Template</h2>
-					<h3>Did you know that more than 65% of all web traffic is mobile traffic from cell phones and tablets? That's why it's critical that your website not only works perfectly on computers, but also effortlessly across all other devices and browsers.</h3>
-					<h3>All websites developed by Fivestar Media are responsive and designed to work fluidly across cell phones, tablets, computers and even large-screen TV's.</h3>
+					<h3>Fivestar Media understands the importance of having a well-designed website to convey strong brand presence on the internet. At the same time, we understand that not everyone needs a custom made website to start off with.</h3>
+					<h3 class="bold">Template based websites are an excellent, cost-effective solution for small businesses with a single service line from one location.</h3>
+					<!-- <h3>Choose your design from our library of templates. We modify the colors, fonts and layout to create a unique website for your company.</h3> -->
 				</div>
 			</div>
 		</div>
-		<div class="row eqHeight">
-			<div class="col-xs-12 col-md-7 featuresPadding">
-				<div class="serviceDetail">
-					<h2>Template+</h2>
-					<h3>Did you know that more than 65% of all web traffic is mobile traffic from cell phones and tablets? That's why it's critical that your website not only works perfectly on computers, but also effortlessly across all other devices and browsers.</h3>
-					<h3>All websites developed by Fivestar Media are responsive and designed to work fluidly across cell phones, tablets, computers and even large-screen TV's.</h3>
-				</div>
-			</div>
-			<div class="col-xs-12 col-md-5 featuresPadding">
+		<div class="row eqHeight reversible">
+			<div class="col-xs-12 col-md-4 featuresPadding">
 				<div class="featuresImg">
 					<img class="shadow" src="{{ site.baseurl }}/images/template-plus.jpg">
 				</div>
 			</div>
+
+			<div class="col-xs-12 col-md-8 featuresPadding">
+				<div class="serviceDetail">
+					<h2>Template+</h2>
+					<h3>These templates are designed for companies that have multiple service lines or industries served. <span class="bold">They fit a wide range of companies from HVAC companies, local contractors, financial services and manufacturing firms</span>.</h3>
+					<h3>These websites typically take four weeks to complete from start to finish.</h3>
+				</div>
+			</div>
 		</div>
 		<div class="row eqHeight">
-			<div class="col-xs-12 col-md-5 featuresPadding">
+			<div class="col-xs-12 col-md-4 featuresPadding">
 				<div class="featuresImg">
 					<img class="shadow" src="{{ site.baseurl }}/images/custom.jpg">
 				</div>
 			</div>
-			<div class="col-xs-12 col-md-7 featuresPadding">
+			<div class="col-xs-12 col-md-8 featuresPadding">
 				<div class="serviceDetail">
 					<h2>Custom</h2>
-					<h3>Did you know that more than 65% of all web traffic is mobile traffic from cell phones and tablets? That's why it's critical that your website not only works perfectly on computers, but also effortlessly across all other devices and browsers.</h3>
-					<h3>All websites developed by Fivestar Media are responsive and designed to work fluidly across cell phones, tablets, computers and even large-screen TV's.</h3>
+					<h3>A custom website is hand-crafted for your business to connect with your users through immersive user experience. The entire website is hand-coded from scratch.</h3>
+					<h3><span class="bold">This is the recommended option for large industrial and professional firms such as accounting, consulting, law, mining, metal and engineering firms</span>. These websites are designed to compel your users to explore your business deeper during their research phase.</h3>
+					<h3>We research your largest competitors to design a strategy that will set your firm apart from the crowd. These websites typically require four weeks to complete from start to finish.</h3>
 				</div>
 			</div>
 		</div>
-		<div class="row eqHeight">
-			<div class="col-xs-12 col-md-7 featuresPadding">
-				<div class="serviceDetail">
-					<h2>Enterprise</h2>
-					<h3>Did you know that more than 65% of all web traffic is mobile traffic from cell phones and tablets? That's why it's critical that your website not only works perfectly on computers, but also effortlessly across all other devices and browsers.</h3>
-					<h3>All websites developed by Fivestar Media are responsive and designed to work fluidly across cell phones, tablets, computers and even large-screen TV's.</h3>
-				</div>
-			</div>
-			<div class="col-xs-12 col-md-5 featuresPadding">
+		<div class="row eqHeight reversible">
+			<div class="col-xs-12 col-md-4 featuresPadding">
 				<div class="featuresImg">
 					<img class="shadow" src="{{ site.baseurl }}/images/enterprise.jpg">
 				</div>
 			</div>
-		</div>
-		<div class="row">
-			<div class="col-xs-12 serviceHeading">
-				<h1>Website Design Pricing</h1>
-				<h3>Call us today at 416-464-6573 to learn more about our Website Design packages. You can also use our Contact Form or send us an email at info@fivestarmedia.com.</h3>
+			<div class="col-xs-12 col-md-8 featuresPadding">
+				<div class="serviceDetail">
+					<h2>Enterprise</h2>
+					<h3>These enterprise-level websites are designed for businesses that require advanced, custom functionality either for themselves or from their clients. These include systems that require logging in, scheduling, collaboration, back-up, redundancy and other advanced features.</h3>
+					<h3 class="bold">We take an engineering approach for our largest projects. A prototype website is developed beforehand and tested with potential clients to ensure smooth functionality across the entire team.</h3>
+					<h3>The amount of time required to develop these websites varies from four to eight weeks or more.</h3>
+				</div>
 			</div>
 		</div>
-		<div class="row eqHeight greybg featuresContainer">
+		<div class="row Why">
+			<div class="col-xs-12 serviceHeading">
+				<h1>Website Design Pricing</h1>
+				<h3>Call us today at {% include telnumberlink.html %} to learn more about our Website Design packages. You can also use our <a href="{{ site.baseurl }}/contact/"><span class="bold">Contact Form</span></a> or send us an email at {% include emaillink.html %} at your convenience.</h3>
+			</div>
+		</div>
+		<div class="row eqHeight Why featuresContainer">
 			<div class="col-xs-12 col-md-3 features">
 				<ul class="shadow">
 					<h2 class="bold">Template</h2>
 					<h2 class="bold">$700</h2>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
+					<li>WordPress Template</li>
+					<li>Customization of Theme</li>
+					<li>1-hour Brainstorming Session</li>
+					<li>Mobile Responsive</li>
+					<li>Google Analytics</li>
+					<li>Copyrighting</li>
+					<li>Social Media Integration</li>
+					<li>Google Maps</li>
+					<li>Photosourcing</li>
+					<li>2 Rounds of Revisions</li>
+					<li>Contact Form</li>
+					<li>XML Sitemap</li>
+					<li>*Additional Pages $70 each</li>
 				</ul>
 			</div>
 			<div class="col-xs-12 col-md-3 features">
 				<ul class="shadow">
 					<h2 class="bold">Template+</h2>
-					<h2 class="bold">$700</h2>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
+					<h2 class="bold">$1,700</h2>
+					<li>WordPress Template</li>
+					<li>Customization of Theme</li>
+					<li>1-hour Brainstorming Session</li>
+					<li>Mobile Responsive</li>
+					<li>Google Analytics</li>
+					<li>Copyrighting</li>
+					<li>Social Media Integration</li>
+					<li>Google Maps</li>
+					<li>Photosourcing</li>
+					<li>2 Rounds of Revisions</li>
+					<li>Contact Form</li>
+					<li>XML Sitemap</li>
+					<li>*Additional Pages $100 each</li>
 				</ul>
 			</div>
 			<div class="col-xs-12 col-md-3 features">
 				<ul class="shadow">
 					<h2 class="bold">Custom</h2>
-					<h2 class="bold">$700</h2>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
+					<h2 class="bold">$2,700</h2>
+					<li>Custom CMS</li>
+					<li>Customization of Theme</li>
+					<li>1-hour Brainstorming Session</li>
+					<li>Mobile Responsive</li>
+					<li>Google Analytics</li>
+					<li>Copyrighting</li>
+					<li>Social Media Integration</li>
+					<li>Google Maps</li>
+					<li>Photosourcing</li>
+					<li>2 Rounds of Revisions</li>
+					<li>Contact Form</li>
+					<li>XML Sitemap</li>
+					<li>*Additional Pages $150 each</li>
 				</ul>
 			</div>
 			<div class="col-xs-12 col-md-3 features">
 				<ul class="shadow">
 					<h2 class="bold">Enterprise</h2>
 					<h2 class="bold">$5,000+</h2>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
+					<li>Custom CMS</li>
+					<li>Customization of Theme</li>
+					<li>1-hour Brainstorming Session</li>
+					<li>Mobile Responsive</li>
+					<li>Google Analytics</li>
+					<li>Copyrighting</li>
+					<li>Social Media Integration</li>
+					<li>Google Maps</li>
+					<li>Photosourcing</li>
+					<li>2 Rounds of Revisions</li>
+					<li>Contact Form</li>
+					<li>XML Sitemap</li>
+					<li>*Additional Pages $200 each</li>
 				</ul>
 			</div>
 		</div>
